Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -39,7 +39,22 @@
 
 <pre><code>$('#form').myValidate("btn",function(){callback();});</code></pre>
 
+<h1>2:现支持校验属性</h1>
 
+<pre>
+<code>
+check-type：
+"required"：为空校验
+"min-max":字符长度校验
+"idCard"：身份证号码
+"mail"：邮箱地址
+"passWord"：密码长度与强度
+"confirmPwd"：密码确认
+"mobile"：手机号码
+"dateYmd"：日期格式（YYYY-MM-DD）
+"call-back"：文本失去焦点回调
+</code>
+</pre>
         </section>
 
         <aside id="sidebar">
