Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <h1>简介：</h1>
 
 <p>Jquery-Lweight-Validate ：轻量级校验框架。之所以这么称呼它。原因很简单，与其他校验框架相比，次框架没有太多的JS代码在你的HTML中，仅仅一行，其他所有的校验属性，均通过框架中自定义的HTML属性标签进行校验配置。当然我个人是这么觉得配置起来简单方便。
-本框架基于 Validation-for-bootstrap 作者fatesheep 的程序进行重写。原因：由于项目原因有一些地方无法与原作者的框架进行良好整合。所以只能很遗憾的放弃 Validation-for-bootstrap。所以自行基于此基础上进行 重写和延伸。很感谢 Validation-for-bootstrap 框架作者 fatesheep 源码。同时感谢 我的好朋友：jovi 对框架的CSS方面的美化。</p>
+本框架基于 Validation-for-bootstrap 作者fatesheep 的程序进行重写。原因：由于项目原因有一些地方无法与原作者的框架进行良好整合。所以只能很遗憾的放弃 Validation-for-bootstrap。所以自行基于此基础上进行 重写和延伸。很感谢 Validation-for-bootstrap 框架作者 fatesheep 源码。同时感谢 我的好朋友：jovi 对框架的CSS方面的美化。知识用来分享，所以将其开源。希望对能为大家带来帮助，也希望更多的人能够讲自己的作品开源出来。</p>
 
 <h1>1：代码使用：</h1>
 
@@ -55,6 +55,22 @@ check-type：
 "call-back"：文本失去焦点回调
 </code>
 </pre>
+
+<h1>3:使用配置</h1>
+
+<p><code></code></p>
+
+<div>
+  用户名
+    <div>
+</div>
+</div>
+
+<p></p>
+
+<h1>4：总结</h1>
+
+<p>更多详细配置请下载源码，运行demo.html进行相关学习&amp;使用。框架还在beta阶段。如有BUG 表示歉意。一旦发现BUG，会以最快的速度修复。如有意见请发EMAIL致：<a href="mailto:wangfei1321@gmail.com">wangfei1321@gmail.com</a> </p>
         </section>
 
         <aside id="sidebar">
