Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@ check-type：
 
 <h1>3:使用配置</h1>
 
-<p><code></code></p>
-
+<pre>
+<code>
 <div>
   用户名
     <div>
 </div>
 </div>
-
-<p></p>
+</code>
+</pre>
 
 <h1>4：总结</h1>
 
