Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ check-type：
 
 <h1>4：总结</h1>
 
-<p>更多详细配置请下载源码，运行demo.html进行相关学习&amp;使用。框架还在beta阶段。如有BUG 表示歉意。一旦发现BUG，会以最快的速度修复。如有意见请发EMAIL致：<a href="mailto:wangfei1321@gmail.com">wangfei1321@gmail.com</a> </p>
+<p>更多详细配置请下载源码，运行demo.html进行相关学习&amp;使用。框架还在beta阶段。如有BUG 表示歉意。一旦发现BUG，会以最快的速度修复。如有意见请登录 <a href="http://www.oschina.net/p/jquery-lweight-validate">http://www.oschina.net/p/jquery-lweight-validate</a> 主页留言</p>
         </section>
 
         <aside id="sidebar">
