Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ check-type：
 "confirmPwd"：密码确认
 "mobile"：手机号码
 "dateYmd"：日期格式（YYYY-MM-DD）
-"call-back"：文本失去焦点回调
+"data-callback"：文本失去焦点回调
 </code>
 </pre>
 
@@ -63,7 +63,7 @@ check-type：
                 &lt;label class="control-label" for="inputName"&gt;用户名&lt;/label&gt;
                 &lt;div class="controls"&gt;
                     &lt;input type="text" id="inputName" check-type="required" 
-                    call-back="mycallback()" call-message="用户名名已存在"  required-message="用户名不能为空" &gt;
+                    data-callback="mycallback()" call-message="用户名名已存在"  required-message="用户名不能为空" &gt;
                     &lt;/div&gt;
             &lt;/div&gt;
 </code></pre>
