Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <p>引入jquery.js， Lweight.css，stylesheet.css，jquery-Lweight-validate.js ，pwd_sprite.png </p>
 
-<pre><code>$('#form').myValidate("btn",function(){callback();});</code></pre>
+<pre><code>$('#form').myValidate(function(){callback();});</code></pre>
 
 <h1>2:现支持校验属性</h1>
 
