Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@ check-type：
 "confirmPwd"：密码确认
 "mobile"：手机号码
 "dateYmd"：日期格式（YYYY-MM-DD）
+"unRequired"非固定格式性质文本，非必填写，若填写，需校验文本值长度
+other：
 "data-callback"：文本失去焦点回调
+"non-required"  固定格式文本中，非必填写，若填写，必须校验文本格式
 </code>
 </pre>
 
