--- a/demo.html
+++ b/demo.html
@@ -135,7 +135,19 @@
 				</div>
 			</div>
 			
+					<div class="control-group">
+				<label class="control-label" for="inputInofo">起始时间</label>
+				<div class="controls">
+						<input type="text" id="inputDateST" check-type="dateCompare"  >
+				</div>
+			</div>
 			
+			<div class="control-group">
+				<label class="control-label" for="inputInofo">结束时间</label>
+				<div class="controls">
+						<input type="text" id="inputDateED" check-type="dateCompare" >
+				</div>
+			</div>	
 			
 			<div class="control-group">
 				<div class="controls">
