--- a/index.html
+++ b/index.html
@@ -58,16 +58,8 @@ check-type：
 "confirmPwd"：密码确认
 "mobile"：手机号码
 "dateYmd"：日期格式（YYYY-MM-DD）
-"unRequired"非固定格式性质文本，非必填写，若填写，需校验文本值长度
-other：
-"data-callback"：文本失去焦点回调
-"non-required"  固定格式文本中，非必填写，若填写，必须校验文本格式
-options：  formCall：表单提交函数
-isAlert：是否启用alter提示
-formKey：是否启用键盘回车时间
-alterCall：自定义alter函数
-</code>
-</pre>
+"dateCompare":起始日期 
+</code></pre>
 
 <h1>3:使用配置</h1>
 
